# autogram

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  media_plan.json  pyproject.toml  summaries.json  urls.json
autogram/: __init__.py  article_fetcher.py  article_parser.py  autogram.py  clean.py  config.py  extract_urls.py  file_manager.py  generate_media_plan.py  generate_summaries.py  main.py  mapping_manager.py  message_processor.py  message_updater.py  post_summarizer.py  summarize_content.py  summarizer.py  telegram_client_handler.py  update_channel.py
autogram/api/: main.py
